Add more stylings and details

--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <html>
 <head>
-  <title>คุณอยู่ตรงไหน Political Spectrum Poll</title>
+  <title>คุณอยู่ตรงไหน? Political Spectrum Poll</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 
 	<!-- for Google -->
-	<meta name="description" content="ความเชื่อทางการเมืองของคุณอยู่ตรงไหน ใกล้พรรคอะไร (ข้อมูลจาก พรรคนี้อยู่ตรงไหน ในรายการ พรรคนี้เป็นไงบ้าง โดย Farose)" />
+	<meta name="description" content="ความเชื่อทางการเมืองของคุณอยู่ตรงไหน? ใกล้พรรคอะไร? (ข้อมูลจาก พรรคนี้อยู่ตรงไหน? ในรายการ พรรคนี้เป็นไงบ้าง? โดย Farose)" />
 	<meta name="keywords" content="visualization, scatterplot, poll, travel, politics, การเมือง, farose, ฟาโรส" />
 	<meta name="author" content="Puripant Ruchikachorn" />
 
@@ -14,23 +14,33 @@
 	<meta property="og:type" content="article" />
 	<meta property="og:image" content="http://puripant.ruchikachorn.com/political-spectrum-poll/screenshot.png" />
 	<meta property="og:url" content="http://puripant.ruchikachorn.com/political-spectrum-poll/" />
-	<meta property="og:description" content="ความเชื่อทางการเมืองของคุณอยู่ตรงไหน ใกล้พรรคอะไร (ข้อมูลจาก พรรคนี้อยู่ตรงไหน ในรายการ พรรคนี้เป็นไงบ้าง โดย Farose)" />
+	<meta property="og:description" content="ความเชื่อทางการเมืองของคุณอยู่ตรงไหน? ใกล้พรรคอะไร? (ข้อมูลจาก พรรคนี้อยู่ตรงไหน? ในรายการ พรรคนี้เป็นไงบ้าง? โดย Farose)" />
 
 	<!-- for Twitter -->
 	<meta name="twitter:card" content="summary" />
 	<meta name="twitter:title" content="คุณอยู่ตรงไหน Political Spectrum Poll" />
-	<meta name="twitter:description" content="ความเชื่อทางการเมืองของคุณอยู่ตรงไหน ใกล้พรรคอะไร (ข้อมูลจาก พรรคนี้อยู่ตรงไหน ในรายการ พรรคนี้เป็นไงบ้าง โดย Farose)" />
+	<meta name="twitter:description" content="ความเชื่อทางการเมืองของคุณอยู่ตรงไหน? ใกล้พรรคอะไร? (ข้อมูลจาก พรรคนี้อยู่ตรงไหน? ในรายการ พรรคนี้เป็นไงบ้าง? โดย Farose)" />
 	<meta name="twitter:image" content="http://puripant.ruchikachorn.com/political-spectrum-poll/screenshot.png" />
 
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Prompt:wght@600&display=swap" rel="stylesheet">
 	<link href="main.css" rel="stylesheet">
 </head>
 <body>
-	<div id="chart"></div>
-	<div id="axis">
-		<div class="axis-name y top">CAPITALISM ทุนนิยม</div>
-		<div class="axis-name y bottom">SOCIALISM สังคมนิยม</div>
-		<div class="axis-name x left">LIBERAL เสรีนิยม</div>
-		<div class="axis-name x right">CONSERVATIVE อนุรักษ์นิยม</div>
+	<div class="heading">
+		<div class="heading1">คุณอยู่ตรงไหน?</div>
+		<div class="heading2">ใน Political Spectrum</div>
+	</div>
+	<div class="wrapper">
+		<div id="axis"></div>
+		<div id="axis-names">
+			<div class="axis-name y top">CAPITALISM ทุนนิยม</div>
+			<div class="axis-name y bottom">SOCIALISM สังคมนิยม</div>
+			<div class="axis-name x left">LIBERAL เสรีนิยม</div>
+			<div class="axis-name x right">CONSERVATIVE อนุรักษ์นิยม</div>
+		</div>
+		<div id="chart"></div>
 	</div>
 
 	<script src="https://d3js.org/d3.v7.min.js"></script>
