--- a/index.html
+++ b/index.html
@@ -42,6 +42,10 @@
 		</div>
 		<div id="chart"></div>
 	</div>
+	<div class="details">
+		<div id="details1">กดเลือกตำแหน่งในช่องข้างบนที่ตรงกับความคิดทางการเมืองของคุณมากที่สุด</div>
+		<div id="details2">รูปแบบและข้อมูลจากช่วง พรรคนี้อยู่ตรงไหน?<br />ในรายการ <a href="https://www.youtube.com/playlist?list=PLg523oxEzw_ZgLDw6TyuVGaydyC1uMOA8">พรรคนี้เป็นไงบ้าง?</a> โดย <a href="https://www.youtube.com/@FAROSECHANNEL">FAROSE</a></div>
+	</div>
 
 	<script src="https://d3js.org/d3.v7.min.js"></script>
 	<script src="main.js"></script>
