--- a/index.html
+++ b/index.html
@@ -1,6 +1,16 @@
 <html>
 <head>
-  <title>คุณอยู่ตรงไหน? Political Spectrum Poll</title>
+	<!-- Google tag (gtag.js) -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-JH1504N7EN"></script>
+	<script>
+	window.dataLayer = window.dataLayer || [];
+	function gtag(){dataLayer.push(arguments);}
+	gtag('js', new Date());
+
+	gtag('config', 'G-JH1504N7EN');
+	</script>
+	
+	<title>คุณอยู่ตรงไหน? Political Spectrum Poll</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 
