Update readme and add link to GitHub

--- a/index.html
+++ b/index.html
@@ -45,7 +45,10 @@
 	<div class="details">
 		<div id="details1">กดเลือกตำแหน่งในช่องข้างบนที่ตรงกับความคิดทางการเมืองของคุณมากที่สุด</div>
 		<div id="details2"></div>
-		<div id="details3"><br />รูปแบบและข้อมูลจากช่วง พรรคนี้อยู่ตรงไหน?<br />ในรายการ <a href="https://www.youtube.com/playlist?list=PLg523oxEzw_ZgLDw6TyuVGaydyC1uMOA8">พรรคนี้เป็นไงบ้าง?</a> โดย <a href="https://www.youtube.com/@FAROSECHANNEL">FAROSE</a></div>
+		<div id="details3">
+			<br />รูปแบบและข้อมูลจากช่วง พรรคนี้อยู่ตรงไหน? ในรายการ <a href="https://www.youtube.com/playlist?list=PLg523oxEzw_ZgLDw6TyuVGaydyC1uMOA8">พรรคนี้เป็นไงบ้าง?</a> โดย <a href="https://www.youtube.com/@FAROSECHANNEL">FAROSE</a>
+			<br />โค้ดทั้งหมดอยู่ใน <a href="https://github.com/puripant/political-spectrum-poll">GitHub</a>
+		</div>
 	</div>
 
 	<!-- Google tag (gtag.js) -->
